CSS/listTasks.css
/* Tasks Section */
.checkbox {
  appearance: none;
  display: inline-block;
  margin-top: 16px;
  width: 35px;
  height: 35px;
  border-radius: 3px;
  border: none;
  outline: none;
  cursor: pointer;
  background-color: var(--cream);
}
.checkbox:checked {
  background-color: var(--mustard);
  text-align: center;
}
.checkbox:checked::before {
  width: 100%;
  height: 100%;
  content: "\2713";
  font-size: 2em;
  color: var(--cream);
}
.checkbox:checked + label {
  text-decoration: line-through;
}
.checkbox-label {
  color: var(--cream);
  font-size: 1.2em;
  padding: 10px;
  text-align: left;
  width: 150px;
}
.task-item {
  padding-bottom: 20px;
  border-radius: 5px;
}
.highlight {
  padding-right: 30px;
  text-shadow: none;
}
.message {
  font-size: 2em;
  color: var(--cream);
  margin-top: 50px;
}
@media screen and (min-width: 760px) {
  .center {
    width: 70vw;
  }
  .checkbox-label {
    width: 680px;
  }
}

